Authorization middleware unit tests
