# api/src/routes/routes.js
@@ -1,18 +1,21 @@
 const {Router} = require('express')
 const { registerCustomer, login, deactivateCustomerAccount, reactivateCustomerAccount } = require('../controller/auth.controller')
+const { fetchCustomerById, fetchAllCustomers, updateCustomerAccount, deleteCustomerAccount } = require('../controller/customer.controller')
+const { authorization } = require('../middleware/authorization')
+const { adminAuthorization } = require('../middleware/admin.authorization')
 
 const router = Router()
 
 // User's authentication routes
 router.post('/customer/login', login)
 router.post('/customer/register', registerCustomer)
-router.put('/customer/deactivate-account/:id', deactivateCustomerAccount)
-router.put('/customer/reactivate-account/:id', reactivateCustomerAccount)
+router.put('/customer/deactivate-account/:id', authorization, deactivateCustomerAccount)
+router.put('/customer/reactivate-account/:id', authorization, reactivateCustomerAccount)
 
 // Customer routes
-router.get('/customer/:id')
-router.get('/customers')
-router.put('/customer/:id')
-router.delete("/customer/:id")
+router.get('/customer/:id', authorization, fetchCustomerById)
+router.get('/customers', adminAuthorization, fetchAllCustomers)
+router.put('/customer/:id', authorization, updateCustomerAccount)
+router.delete("/customer/:id", adminAuthorization, deleteCustomerAccount)
 
 module.exports = router
